KAS-3930 Add scrollbar support & fix faulty alignment for mobile version

--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -51,10 +51,19 @@
 .au-c-search-container__content {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
+
+  @include mq(medium) {
+    overflow: hidden;
+  }
 
   .au-c-main-container {
     height: 100%;
+    display: block;
+
+    @include mq(medium) {
+      display: flex;
+    }
   }
 }
 
